--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fairshare",
-  "version": "1.4.0",
+  "version": "1.5.0-beta.1",
   "description": "Your one-stop tool for making biomedical research data and software FAIR",
   "private": true,
   "keywords": [
@@ -94,6 +94,7 @@
     "@babel/eslint-parser": "7.18.2",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
+    "@fairdataihub/config": "1.2.0",
     "@iconify/vue": "3.2.1",
     "@storybook/addon-actions": "6.5.9",
     "@storybook/addon-essentials": "6.5.9",
