--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fairshare",
-  "version": "1.5.0-beta.1",
+  "version": "1.5.0",
   "description": "Your one-stop tool for making biomedical research data and software FAIR",
   "private": true,
   "keywords": [
