--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "pinia": "2.0.14",
     "ps-tree": "1.2.0",
     "semver": "7.3.7",
+    "uniqid": "5.4.0",
     "universal-analytics": "0.5.3",
     "uuid": "8.3.2",
     "validator": "13.7.0",
