wip: 🚧 add publish process

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "lodash": "4.17.21",
     "marked": "4.2.12",
     "mousetrap": "1.6.5",
+    "nanoid": "4.0.2",
     "pinia": "2.0.32",
     "ps-tree": "1.2.0",
     "semver": "7.3.8",
