--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fairshare",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Your one-stop tool for making biomedical research data and software FAIR",
   "homepage": "https://fairdataihub.org/fairshare",
   "private": true,
@@ -36,7 +36,9 @@
     "commit": "cz",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepare": "husky install"
+    "prepare": "run-script-os",
+    "prepare:win32": "husky install",
+    "prepare:darwin:linux": "husky install && chmod ug+x .husky/*  && chmod ug+x .git/hooks/*"
   },
   "lint-staged": {
     "./src/**/*.{ts,js,jsx,tsx,vue,json}": [
@@ -55,99 +57,101 @@
     "url": "https://github.com/fairdataihub/FAIRshare.git"
   },
   "dependencies": {
-    "@electron/remote": "2.0.8",
-    "@element-plus/icons-vue": "2.0.9",
+    "@electron/remote": "2.0.9",
+    "@element-plus/icons-vue": "2.0.10",
     "@headlessui/vue": "1.6.0",
     "@kangc/v-md-editor": "2.3.15",
     "axios": "0.27.2",
-    "core-js": "3.24.1",
+    "core-js": "3.28.0",
     "crypto-js": "4.1.1",
-    "dayjs": "1.11.5",
+    "dayjs": "1.11.7",
     "doi-regex": "0.1.13",
-    "dompurify": "2.3.10",
+    "dompurify": "3.0.0",
     "electron-log": "4.4.8",
     "electron-updater": "5.0.5",
-    "element-plus": "2.2.15",
+    "element-plus": "2.2.32",
     "find-free-port": "2.0.0",
     "fs-extra": "10.1.0",
-    "gsap": "3.11.0",
+    "gsap": "3.11.4",
     "humanparser": "2.6.0",
-    "katex": "0.16.0",
+    "katex": "0.16.4",
     "klaw-sync": "6.0.0",
     "lodash": "4.17.21",
-    "marked": "4.0.19",
+    "marked": "4.2.12",
     "mousetrap": "1.6.5",
-    "pinia": "2.0.21",
+    "nanoid": "4.0.2",
+    "pinia": "2.0.32",
     "ps-tree": "1.2.0",
-    "semver": "7.3.7",
+    "semver": "7.3.8",
     "uniqid": "5.4.0",
     "universal-analytics": "0.5.3",
-    "uuid": "8.3.2",
-    "validator": "13.7.0",
-    "vue": "3.2.37",
-    "vue-router": "4.1.5",
+    "uuid": "9.0.0",
+    "validator": "13.9.0",
+    "vue": "3.2.47",
+    "vue-router": "4.1.6",
     "vue-toastification": "2.0.0-rc.5",
-    "vue3-lottie": "2.3.0",
+    "vue3-lottie": "3.0.0",
     "vue3-popper": "1.5.0",
     "vuedraggable": "4.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.10",
     "@babel/eslint-parser": "7.18.9",
-    "@commitlint/cli": "17.0.3",
-    "@commitlint/config-conventional": "17.0.3",
-    "@fairdataihub/config": "1.2.0",
-    "@iconify/vue": "3.2.1",
-    "@storybook/addon-actions": "6.5.10",
-    "@storybook/addon-essentials": "6.5.10",
-    "@storybook/addon-interactions": "6.5.10",
-    "@storybook/addon-links": "6.5.10",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
+    "@fairdataihub/config": "2.2.1",
+    "@iconify/vue": "4.1.0",
+    "@storybook/addon-actions": "6.5.16",
+    "@storybook/addon-essentials": "6.5.16",
+    "@storybook/addon-interactions": "6.5.16",
+    "@storybook/addon-links": "6.5.16",
     "@storybook/addon-postcss": "2.0.0",
-    "@storybook/builder-webpack4": "6.5.10",
-    "@storybook/builder-webpack5": "6.5.10",
-    "@storybook/manager-webpack4": "6.5.10",
-    "@storybook/manager-webpack5": "6.5.10",
+    "@storybook/builder-webpack4": "6.5.16",
+    "@storybook/builder-webpack5": "6.5.16",
+    "@storybook/manager-webpack4": "6.5.16",
+    "@storybook/manager-webpack5": "6.5.16",
     "@storybook/testing-library": "0.0.13",
-    "@storybook/vue3": "6.5.10",
-    "@tailwindcss/forms": "0.5.2",
-    "@tailwindcss/line-clamp": "0.4.0",
-    "@tailwindcss/typography": "0.5.4",
+    "@storybook/vue3": "6.5.16",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.9",
     "@vue/cli-plugin-babel": "5.0.8",
     "@vue/cli-plugin-eslint": "5.0.8",
     "@vue/cli-service": "5.0.8",
-    "@vue/compiler-sfc": "3.2.37",
-    "autoprefixer": "10.4.8",
+    "@vue/compiler-sfc": "3.2.47",
+    "autoprefixer": "10.4.13",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.5",
-    "chromatic": "6.7.4",
-    "commitizen": "4.2.5",
+    "babel-loader": "8.3.0",
+    "chromatic": "6.17.0",
+    "commitizen": "4.3.0",
     "copyfiles": "2.4.1",
     "cz-conventional-changelog": "3.3.0",
     "del": "6.1.1",
-    "devmoji": "2.3.0",
-    "dotenv": "16.0.1",
-    "electron": "19.0.10",
+    "dotenv": "16.0.3",
+    "electron": "19.1.9",
     "electron-devtools-installer": "3.2.0",
-    "electron-notarize": "1.2.1",
-    "eslint": "8.23.0",
-    "eslint-config-prettier": "8.5.0",
+    "electron-notarize": "1.2.2",
+    "eslint": "8.34.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-storybook": "0.6.4",
-    "eslint-plugin-vue": "9.4.0",
+    "eslint-plugin-storybook": "0.6.10",
+    "eslint-plugin-vue": "9.9.0",
     "gulp": "4.0.2",
     "gulp-copy": "4.0.1",
     "gulp-rename": "2.0.0",
-    "husky": "8.0.1",
-    "lint-staged": "13.0.3",
-    "postcss": "8.4.16",
-    "prettier": "2.7.1",
-    "prettier-plugin-tailwindcss": "0.1.13",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.2",
+    "megasanjay-devmoji": "1.2.1",
+    "postcss": "8.4.21",
+    "prettier": "2.8.4",
+    "prettier-plugin-tailwindcss": "0.2.3",
     "pretty": "2.0.0",
-    "renovate": "32.100.3",
+    "renovate": "34.149.0",
+    "run-script-os": "1.1.6",
     "tailwindcss": "3.1.8",
     "tailwindcss-debug-screens": "2.2.1",
     "vue-cli-plugin-electron-builder": "2.1.1",
-    "vue-loader": "17.0.0"
+    "vue-loader": "17.0.1"
   },
   "browserslist": [
     "> 1%",
